--- a/Final_Project/Release/makefile
+++ b/Final_Project/Release/makefile
@@ -100,6 +100,6 @@ clean:
 
 secondary-outputs: $(SECONDARY_FLASH) $(SECONDARY_SIZE)
 
-.PHONY: all clean dependents
+.PHONY: all clean dependents main-build
 
 -include ../makefile.targets
